--- a/TimerDemo/MainWindow.xaml
+++ b/TimerDemo/MainWindow.xaml
@@ -22,15 +22,34 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <Button
-            x:Name="BtnCloseApplication"
+        <StackPanel
             Grid.Row="0"
             Grid.Column="0"
-            Width="30"
-            Height="30"
-            HorizontalAlignment="Left">
-            <Image Source="{StaticResource ResourceKey=IconApplicationExit2}" Stretch="None" />
-        </Button>
+            Orientation="Horizontal">
+            <Button
+                x:Name="BtnCloseApplication"
+                Width="30"
+                Height="30"
+                HorizontalAlignment="Left">
+                <Image Source="{StaticResource ResourceKey=IconApplicationExit2}" Stretch="None" />
+            </Button>
+
+            <Button
+                x:Name="BtnDispatcherTimer"
+                Width="130"
+                Height="30"
+                Margin="5,0,0,0"
+                HorizontalAlignment="Left">
+                <StackPanel Orientation="Horizontal">
+                    <Image Source="{StaticResource ResourceKey=IconTimer}" Stretch="None" />
+                    <TextBlock
+                        Margin="5,0,0,0"
+                        VerticalAlignment="Center"
+                        FontWeight="Medium"
+                        Text="DispatcherTimer" />
+                </StackPanel>
+            </Button>
+        </StackPanel>
 
         <Rectangle
             Grid.Row="0"
