--- a/TimerDemo/MainWindow.xaml
+++ b/TimerDemo/MainWindow.xaml
@@ -15,6 +15,8 @@
     <Grid x:Name="gridMain">
         <Grid.RowDefinitions>
             <RowDefinition Height="35" />
+            <RowDefinition Height="70" />
+            <RowDefinition Height="35" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -54,8 +56,8 @@
         <Rectangle
             Grid.Row="0"
             Height="2"
-            Margin="0,33,0,0"
             HorizontalAlignment="Stretch"
+            VerticalAlignment="Bottom"
             Fill="Black" />
 
         <TextBlock
@@ -65,6 +67,40 @@
             VerticalAlignment="Center"
             FontSize="24"
             Text="Timervarianten unter NET 10" />
+
+        <Rectangle
+            Grid.Row="1"
+            Height="2"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Bottom"
+            Fill="Black" />
+
+        <TextBlock
+            Grid.Row="2"
+            Grid.Column="0"
+            Margin="10,0,0,0"
+            HorizontalAlignment="Left"
+            VerticalAlignment="Center"
+            FontSize="24">
+            <Run Text="Timervarianten" />
+            <Run Text=":" />
+            <Run Text="{Binding Path=Timervarianten}" />
+        </TextBlock>
+
+        <Rectangle
+            Grid.Row="2"
+            Height="2"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Bottom"
+            Fill="Blue" />
+
+        <TextBlock
+            Grid.Row="3"
+            Grid.Column="0"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center"
+            FontSize="24"
+            Text="{Binding Path=TimerResult}" />
 
     </Grid>
 </Window>
